Lib/AlternateWrapper/NaroOccCore/NaroOccCore-build-desktop/Occ/IFSelect/IFSelectWorkSession.cs

		[DllImport("NaroOccCore.dll")]
		private static extern IntPtr IFSelect_WorkSession_NamedItem9381D4D(IntPtr instance, string name);
		[DllImport("NaroOccCore.dll")]
		private static extern IntPtr IFSelect_WorkSession_NamedItemB439B3D5(IntPtr instance, IntPtr name);
		[DllImport("NaroOccCore.dll")]
		private static extern int IFSelect_WorkSession_NameIdent9381D4D(IntPtr instance, string name);
		[DllImport("NaroOccCore.dll")]
		private static extern bool IFSelect_WorkSession_HasNameF411CB01(IntPtr instance, IntPtr item);
		[DllImport("NaroOccCore.dll")]
		private static extern IntPtr IFSelect_WorkSession_NameF411CB01(IntPtr instance, IntPtr item);
		[DllImport("NaroOccCore.dll")]
		private static extern int IFSelect_WorkSession_AddItemA46DC5B5(IntPtr instance, IntPtr item,bool active);
		[DllImport("NaroOccCore.dll")]
		private static extern int IFSelect_WorkSession_AddNamedItem5A688646(IntPtr instance, string name,IntPtr item,bool active);
		[DllImport("NaroOccCore.dll")]
		private static extern bool IFSelect_WorkSession_SetActiveA46DC5B5(IntPtr instance, IntPtr item,bool mode);
		[DllImport("NaroOccCore.dll")]
		private static extern bool IFSelect_WorkSession_RemoveNamedItem9381D4D(IntPtr instance, string name);
		[DllImport("NaroOccCore.dll")]
		private static extern bool IFSelect_WorkSession_RemoveName9381D4D(IntPtr instance, string name);
		[DllImport("NaroOccCore.dll")]
		private static extern bool IFSelect_WorkSession_RemoveItemF411CB01(IntPtr instance, IntPtr item);
		[DllImport("NaroOccCore.dll")]
		private static extern void IFSelect_WorkSession_ClearItems(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern IntPtr IFSelect_WorkSession_ItemLabelE8219145(IntPtr instance, int id);
		[DllImport("NaroOccCore.dll")]
		private static extern int IFSelect_WorkSession_NextIdentForLabelC8778026(IntPtr instance, string label,int id,int mode);
		[DllImport("NaroOccCore.dll")]
		private static extern IntPtr IFSelect_WorkSession_NewParamFromStatic8A1B7C71(IntPtr instance, string statname,string name);
		[DllImport("NaroOccCore.dll")]
		private static extern IntPtr IFSelect_WorkSession_TextParamE8219145(IntPtr instance, int id);
		[DllImport("NaroOccCore.dll")]
		private static extern IntPtr IFSelect_WorkSession_TextValueB439B3D5(IntPtr instance, IntPtr par);
		[DllImport("NaroOccCore.dll")]
		private static extern IntPtr IFSelect_WorkSession_NewTextParam9381D4D(IntPtr instance, string name);
		[DllImport("NaroOccCore.dll")]
		private static extern bool IFSelect_WorkSession_SetTextValueC5444B6E(IntPtr instance, IntPtr par,string val);
		[DllImport("NaroOccCore.dll")]
		private static extern bool IFSelect_WorkSession_ResetItemSelectionF411CB01(IntPtr instance, IntPtr item);
		[DllImport("NaroOccCore.dll")]
		private static extern void IFSelect_WorkSession_ClearShareOut461FC46A(IntPtr instance, bool onlydisp);
		[DllImport("NaroOccCore.dll")]
		private static extern int IFSelect_WorkSession_NbFinalModifiers461FC46A(IntPtr instance, bool formodel);
		[DllImport("NaroOccCore.dll")]
		private static extern bool IFSelect_WorkSession_ChangeModifierRank282F7253(IntPtr instance, bool formodel,int before,int after);
		[DllImport("NaroOccCore.dll")]
		private static extern void IFSelect_WorkSession_ClearFinalModifiers(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern IntPtr IFSelect_WorkSession_DefaultFileRoot(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern string IFSelect_WorkSession_GiveFileRoot9381D4D(IntPtr instance, string file);
		[DllImport("NaroOccCore.dll")]
		private static extern string IFSelect_WorkSession_GiveFileComplete9381D4D(IntPtr instance, string file);
		[DllImport("NaroOccCore.dll")]
		private static extern void IFSelect_WorkSession_ClearFile(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void IFSelect_WorkSession_EvaluateFile(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern IntPtr IFSelect_WorkSession_FileNameE8219145(IntPtr instance, int num);
		[DllImport("NaroOccCore.dll")]
		private static extern void IFSelect_WorkSession_BeginSentFiles461FC46A(IntPtr instance, bool record);
		[DllImport("NaroOccCore.dll")]
		private static extern IntPtr IFSelect_WorkSession_SentListE8219145(IntPtr instance, int count);
		[DllImport("NaroOccCore.dll")]
		private static extern bool IFSelect_WorkSession_SetRemaining9B05F970(IntPtr instance, int mode);
		[DllImport("NaroOccCore.dll")]
		private static extern int IFSelect_WorkSession_SendAllDE32234A(IntPtr instance, string filename,bool computegraph);
		[DllImport("NaroOccCore.dll")]
		private static extern int IFSelect_WorkSession_WriteFile9381D4D(IntPtr instance, string filename);
		[DllImport("NaroOccCore.dll")]
		private static extern int IFSelect_WorkSession_QueryCheckStatusF411CB01(IntPtr instance, IntPtr ent);
		[DllImport("NaroOccCore.dll")]
		private static extern int IFSelect_WorkSession_QueryParentAB457C73(IntPtr instance, IntPtr entdad,IntPtr entson);
		[DllImport("NaroOccCore.dll")]
		private static extern void IFSelect_WorkSession_TraceStatics5107F6FE(IntPtr instance, int use,int mode);
		[DllImport("NaroOccCore.dll")]
		private static extern void IFSelect_WorkSession_DumpShare(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void IFSelect_WorkSession_ListItems9381D4D(IntPtr instance, string label);
		[DllImport("NaroOccCore.dll")]
		private static extern void IFSelect_WorkSession_ListFinalModifiers461FC46A(IntPtr instance, bool formodel);
		[DllImport("NaroOccCore.dll")]
		private static extern void IFSelect_WorkSession_TraceDumpModelE8219145(IntPtr instance, int mode);
		[DllImport("NaroOccCore.dll")]
		private static extern void IFSelect_WorkSession_TraceDumpEntity73E03EE2(IntPtr instance, IntPtr ent,int level);
		[DllImport("NaroOccCore.dll")]
		private static extern void IFSelect_WorkSession_EvaluateCompleteE8219145(IntPtr instance, int mode);
		[DllImport("NaroOccCore.dll")]
		private static extern void IFSelect_WorkSession_ListEntities84559BB6(IntPtr instance, IntPtr iter,int mode);
		[DllImport("NaroOccCore.dll")]
		private static extern void IFSelect_WorkSession_SetErrorHandle(IntPtr instance, bool value);
		[DllImport("NaroOccCore.dll")]
		private static extern bool IFSelect_WorkSession_ErrorHandle(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void IFSelect_WorkSession_SetModeStat(IntPtr instance, bool value);
		[DllImport("NaroOccCore.dll")]
		private static extern bool IFSelect_WorkSession_GetModeStat(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern bool IFSelect_WorkSession_HasModel(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void IFSelect_WorkSession_SetLoadedFile(IntPtr instance, string value);
		[DllImport("NaroOccCore.dll")]
		private static extern string IFSelect_WorkSession_LoadedFile(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern int IFSelect_WorkSession_NbStartingEntities(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern bool IFSelect_WorkSession_IsLoaded(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern int IFSelect_WorkSession_MaxIdent(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern int IFSelect_WorkSession_NbFiles(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern bool IFSelect_WorkSession_SendSplit(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern int IFSelect_WorkSession_MaxSendingCount(IntPtr instance);

		#region NativeInstancePtr Convert constructor

		public IFSelectWorkSession(IntPtr instance) : base(instance) { } 

		protected override void DeleteSelf()
		{ IFSelectWorkSession_Dtor(Instance); }

		#endregion

		[DllImport("NaroOccCore.dll")]
		private static extern void IFSelectWorkSession_Dtor(IntPtr instance);
	}
}
